# github-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  notebook.ipynb  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml  justfile
src/github_analysis/: data_frame_processing.py
src/github_analysis/database/: database.py
src/github_analysis/github/: service.py  settings.py
src/github_analysis/github/client/: base.py  client.py  users.py
src/github_analysis/github/client/dataclasses/: filter_data.py
src/github_analysis/github/client/validators/: author.py  contributions.py  page_info.py  pull_requests.py  repository.py  user.py
src/github_analysis/github/models/: contributions.py  pull_requests.py
