[project]
name = "github-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kamaal Farah", email = "kamaal.f1@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.9.0",
    "sqlmodel>=0.0.22",
    "jupyterlab>=4.2.5",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/github_analysis"]
